# EthiopianEnglishBot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: bot.py
