[project]
name = "ethiopian-english-bot"
version = "1.0.0"
description = "Ethiopian-English vocabulary learning Telegram bot with audio pronunciation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ethiopian English Bot", email = "contact@example.com"}
]
keywords = ["telegram", "bot", "ethiopian", "english", "learning", "vocabulary", "amharic", "tigrinya", "oromo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-telegram-bot==20.7",
    "python-dotenv==1.0.0",
    "gTTS==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ethiopian-english-bot"
Repository = "https://github.com/yourusername/ethiopian-english-bot"
Issues = "https://github.com/yourusername/ethiopian-english-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]